# wasm-benchmarking

./: Pipfile  README.md  analysis.py  build_engine_images.sh  engine.py  main.py  mlr.py  multiple_linear_regression.py  run_keccak_bench.sh  run_keccak_bench_instrumented.sh
benchmarks/: ecadd.yml  keccak.yml
benchmarks/generators/ecadd/: Cargo.toml
benchmarks/generators/ecadd/src/: main.rs
benchmarks/input-generators/ecadd/: Cargo.toml
benchmarks/input-generators/ecadd/src/: main.rs
engines/wasmi/: Cargo.toml  Dockerfile  Dockerfile.instrumented  main.wasm  main.wat
engines/wasmi/src/: main.rs
wasm/: keccak.wasm
